{
    "name": "CameraControl",
    "maps": [
        {
            "name": "Camera",
            "id": "d37af0b2-886a-46a2-88a2-4dad11ccc5aa",
            "actions": [
                {
                    "name": "PrimaryTrigger",
                    "type": "PassThrough",
                    "id": "0a755071-7b8d-4f4a-8ae3-57e9ee25723c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "00478aec-aed0-484e-8dae-dea7efe62fd3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryTrigger",
                    "type": "PassThrough",
                    "id": "c12aa93d-159b-4c91-bcb4-2d1e2facdfdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryPosition",
                    "type": "PassThrough",
                    "id": "516bb0f9-4ae9-48ed-8f28-bdd12ed17037",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "2efc34b5-7951-4818-97c0-72f968e03cfe",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "03b8967b-3032-48f7-8c27-06d8cf760041",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78e96b0c-9667-476f-b8d4-52e9612540fc",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89a8faa0-6c7e-4d25-a377-c672765592c9",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49bd50dc-1626-45cc-90eb-7f3fb2580bb0",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d5a7fb4-8622-46a7-a5ab-0f2b9b54b4ac",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}